--- a/core/templates/create_campaign.html
+++ b/core/templates/create_campaign.html
@@ -26,8 +26,8 @@
 
 <div id="choose-create-entity" class="create">
 <h1>Create Campaign</h1>	
-    	 	<input type="text" value="http://www.capitalfactory.com" name="campaign_url" id="campaign_url"></input>
-		<button id="create-button">CREATE</button>
+    	 	<input type="text" value="Input product info URL" name="campaign_url" id="campaign_url"></input>
+		<button id="create-button" disabled="true">CREATE</button>
 </div>
 
 
@@ -74,8 +74,6 @@
                       $(this).val($(this).attr("original"));
                      $(this).css("color", "#E0E0E0");
                 }
-                //$(this).css("font-weight", "normal");
-     		
      });
   
      $("#campaign_url").keyup(handle_url_key);
@@ -95,10 +93,16 @@ function handle_url_key(){
      			data: values, 
      		success: function(data){
                             if (data.url != "") {
+                                $("#preview").show();
                                  url_full = url_base + "?url=" + data.url;
                                  //alert("bbb" + url_full);
                                  $("#preview").show();
                                  $("#iframe_preview").attr("src", url_full);
+                                 $("#create-button").removeAttr("disabled");
+                            }
+                            else {
+                                $("#create-button").attr("disabled", "disabled");
+                                $("#preview").hide();
                             }
      					},
      		beforeSend: function() {
