--- a/core/templates/site_base.html
+++ b/core/templates/site_base.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src="{% url static 'javascript/jquery-1.4.2.min.js' %}" ></script>
     <script type="text/javascript" src="{% url static 'javascript/myjscript.js' %}" ></script>
     <link rel="stylesheet" type="text/css" href="{% url static 'css/top-site-base.css' %}" />    
+    <script type="text/javascript" src="{% url static 'javascript/jquery.tools.min.js' %}" ></script>
+    <script type="text/javascript" src="{% url static 'javascript/jquery.validate.js' %}" ></script>
 
 	{% block  js_css_include %}
 	{% endblock %}
