--- a/frontpage/templates/frontpage.html
+++ b/frontpage/templates/frontpage.html
@@ -14,7 +14,7 @@
 	</div>
 <BR><BR><BR><BR>
 	<div id="content">
-		<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="437" height="315" id="viddler_8ec82587"><param name="movie" value="http://www.viddler.com/player/8ec82587/" /><param name="allowScriptAccess" value="always" /><param name="allowFullScreen" value="true" /><embed src="http://www.viddler.com/player/8ec82587/" width="437" height="315" type="application/x-shockwave-flash" allowScriptAccess="always" allowFullScreen="true" name="viddler_8ec82587"></embed></object>	</div>
+		<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="545" height="383" id="viddler_3d5b5880"><param name="movie" value="http://www.viddler.com/player/3d5b5880/" /><param name="allowScriptAccess" value="always" /><param name="allowFullScreen" value="true" /><embed src="http://www.viddler.com/player/3d5b5880/" width="545" height="383" type="application/x-shockwave-flash" allowScriptAccess="always" allowFullScreen="true" name="viddler_3d5b5880"></embed></object>	</div>
 	
 	<div id="footer">
 		<div id="dets">
