--- a/static/css/top-site-base.css
+++ b/static/css/top-site-base.css
@@ -23,9 +23,10 @@ body{
 
 
 #footer {
-    position: relative;	
-   # margin-top:-100px;
-   
+    position: relative;
+   	margin-top:80px;
+   font-size: 16px;
+   text-align: center;
 }
 
 #main, #header
