--- a/static/css/2home.css
+++ b/static/css/2home.css
@@ -1,23 +1,42 @@
 /*******************************/
 /**** absolute positioning  ****/
 /*******************************/
-#header #invite-button-div, #header #greeting, #header #dets, #header #invitemsg, #header #links, #user-logo
+#header #invite-button-div, #header #dets, #header #links, #user-logo
 {
-	position: absolute;
+	position: relative;
 }
 #main, #header
 {
 	background-image: url(../images/look/body-bg.png);
 }
-#header, #header #f
+#header, #container
 {
 /*	height: 616px; */
 	position: relative;
 }
-#header #f
+#container
 {
-	background: url(../images/look/centerboard.png) center top no-repeat;
+	margin: auto;
 	width: 980px;
+}
+/* Content Stuff (below header, above iframe) */
+
+#content
+{
+	width: 980px;
+}
+#content #badge{
+	float: left;
+	background-image: url(../images/badge.png);
+	width: 469px;
+	height: 235px;
+	}
+#content-main h2
+{
+	color: #7a7a7a;
+	font-size: 1.4em;
+	padding-bottom: 0;
+	text-transform: uppercase;
 }
 #header h1
 {
@@ -28,42 +47,45 @@
 }
 #header #links
 {
+	position: relative;
 	color: #581e92;
-	left: 707px;
-	top: 12px;
+	padding-right: 40px;
+	right: 5px;
+	top: 5px;
 	font-size:12px;
 	font-weight: bold;
 }
 
-#header #invite-button-div
+#invite-button-div
 {
-       #-moz-border-radius: 10px;
-       -webkit-border-radius: 0px 0px 5px 5px;
-      #border: 1px solid #a9a9a9;
-      box-shadow: 0 0 10px #000000;
-      #-moz-box-shadow: 0 0 10px #000000;
-      -webkit-box-shadow: 3px 3px 10px #000000;
-
-      margin-left: 6px;
-      height: 32px;
-    cursor: pointer;
-        padding-top: 6px;
-	top: 319px;
+	#-moz-border-radius: 10px;
+	-webkit-border-radius: 0px 0px 5px 5px;
+	#border: 1px solid #a9a9a9;
+	box-shadow: 0 0 10px #000000;
+	#-moz-box-shadow: 0 0 10px #000000;
+	-webkit-box-shadow: 3px 3px 10px #000000;
+	position: relative;
+	margin-left: 6px;
+	height: 32px;
+	cursor: pointer;
+	padding-top: 6px;
+	top: 153px;
 	width: 455px;
 	#width: 460px;
 	text-align: center;
 	font-size: 16px;
 	font-weight: bold;
 }
-#header #greeting
+#greeting
 {
+	position: relative;
 	font-size: 16px;
 	color: #444;
 	width: 422px;
-	left: 23px;
-	top: 173px;
+	left: 16px;
+	top: 21px;
 }
-#header #greeting #status
+#greeting #status
 {
 	font-size: 14px;
 	font-weight: bold;
@@ -71,12 +93,12 @@
 	color: #444;
 	float: right;
 }
-#header #invitemsg
+#invitemsg
 {
 	font-size: 36px;
 	color: #fff;
-	width: 458px;
-	padding: 0px 8px 0px 8px;
+	width: 450px;
+	padding: 0px 9px 0px 10px;
 	top: 224px;
 	font-weight: bold;
 	text-align: center;
@@ -86,7 +108,7 @@
 	text-align: center;
 	padding: 15px 10px 0px 10px;
 	}
-#header #dets
+#dets
 {
 	background-image: url(../images/look/ptop.png);
 	background-repeat: no-repeat;
@@ -155,33 +177,22 @@ border:1px solid #ccc;
 	color: #444;
 	font-size: 14px;
 }
-#header #attendees
+#attendees
 {
+	float: right;
 	background-image: url(../images/look/attendees.png);
 	background-repeat: no-repeat;
 	height: 234px;
 	width: 466px;
 	overflow: auto;
-	margin-top: 465px;
 }
-#header #attendees #msg
+#attendees #msg
 {
 	font-weight: bold;
 	color: #444;
 	font-size: 15px;
 	margin: 20px 0 0 22px;
 	overflow: auto;
-}
-#content
-{
-	background: #fff;
-}
-#content-main h2
-{
-	color: #7a7a7a;
-	font-size: 1.4em;
-	padding-bottom: 0;
-	text-transform: uppercase;
 }
 img
 {
