Fixing up some things for the create campaign.

--- a/core/templates/campaign_admin.html
+++ b/core/templates/campaign_admin.html
@@ -16,13 +16,13 @@
 
 <ul>
 <li>
-Campaign Page: <a href="{% url campaign_page chash=campaign.chash %}">{{host}}{% url campaign_page chash=campaign.chash %}</a><br/>
+Campaign: <a href="{% url campaign_page chash=campaign.chash %}">{{host}}{% url campaign_page chash=campaign.chash %}</a><br/>
 </li>
 <li>
 Analytics: <a href="{% url campaign_analytics chash=campaign.chash %}">{{host}}{% url campaign_analytics chash=campaign.chash %}</a><br/>
 </li>
 <li>
-Edit Campaign: <a href="{% url campaign_update chash=campaign.chash %}">{{host}}{% url campaign_update chash=campaign.chash %}</a><br/>
+Edit: <a href="{% url campaign_update chash=campaign.chash %}">{{host}}{% url campaign_update chash=campaign.chash %}</a><br/>
 </li>
 </ul>
 </div>
