--- a/core/templates/campaign_created.html
+++ b/core/templates/campaign_created.html
@@ -8,32 +8,18 @@
 
 
 {% block site-content %}
-<h1>Campaign Created!</h1>
 
 <div id="create-thanks" class="create">
 <h1>Campaign Created, Thanks..</h1>
 
-Campaign Page: <a href="{% url campaign_page chash=campaign.chash %}">{{host}}{% url campaign_page chash=campaign.chash %}</a><br/>
-Analytics Page: <a href="{% url campaign_analytics chash=campaign.chash %}">{{host}}{% url campaign_analytics chash=campaign.chash %}</a><br/>
-Admin Page: <a href="{% url campaign_admin chash=campaign.chash %}">{{host}}{% url campaign_admin chash=campaign.chash %}</a><br/>
-Update Page: <a href="{% url campaign_update chash=campaign.chash %}">{{host}}{% url campaign_update chash=campaign.chash %}</a><br/>
+<ul>
+<li>Campaign: <a href="{% url campaign_page chash=campaign.chash %}">{{host}}{% url campaign_page chash=campaign.chash %}</a><br/></li>
+<li>Analytics: <a href="{% url campaign_analytics chash=campaign.chash %}">{{host}}{% url campaign_analytics chash=campaign.chash %}</a><br/></li>
+<li>Edit: <a href="{% url campaign_update chash=campaign.chash %}">{{host}}{% url campaign_update chash=campaign.chash %}</a><br/></li>
+<li>Admin: <a href="{% url campaign_admin chash=campaign.chash %}">{{host}}{% url campaign_admin chash=campaign.chash %}</a><br/></li>
+<ul>
 
-<br /><br />
 
-{% if event %}
-<a href={% url event_blogvip_flow %}?event={{event.id}} >{{ event.name }}</a> <br />
-Event Id: {{ event.id }} <br />
-Description: {{event.description}} <br />
-Start Time: {{event.event_date_time_start}} <br />
-End Time: {{event.event_date_time_end}} <br />
-Capacity: {{event.capacity}} <br />
-Venue: {{event.venue }} <br />
-Venue Address: {{event.venue_address}} <br />
-Organizer: {{event.organizer_id}} <br />
-
-Admin Url: <a href='{% url analytics %}?event={{event.id}}'>Admin Analytics</a>
-
-{% endif %}
 </div>
 
 {% endblock %}
