--- a/core/templates/create_campaign.html
+++ b/core/templates/create_campaign.html
@@ -76,9 +76,9 @@
                 }
      });
   
-     $("#campaign_url").keyup(handle_url_key);
+     //$("#campaign_url").keyup(handle_url_key);
      $("#campaign_url").keydown(handle_url_key);
-     //$("#campaign_url").keypress(handle_url_key);
+     $("#campaign_url").keypress(handle_url_key);
 
 function handle_url_key(){
                 var values = {};
