--- a/static/css/create.css
+++ b/static/css/create.css
@@ -1,8 +1,8 @@
 div#create-thanks {
 
 		  position: relative;
-		  top: 170px;
-		  left: 30px;
+/*		  top: 170px;
+		  left: 30px; */
 }
 
 div#create-thanks p{
