--- a/static/css/top-site-base.css
+++ b/static/css/top-site-base.css
@@ -13,18 +13,13 @@ body{
 
 #container {
     position:relative;
-    min-height:100%;
-    _height:100%; /* for IE6 as it doesnt understand min-height */
+   /* min-height:100%; 
+    _height:100%;/*  /* for IE6 as it doesnt understand min-height */
 }
-
-#content {
-	 padding-bottom: 100px;
-}
-
 
 #footer {
     position: relative;
-   	margin-top:80px;
+   	margin-top:10px;
    font-size: 16px;
    text-align: center;
 }
@@ -49,9 +44,10 @@ body{
 }
 #content
 {
-	top: 80px;
+	position: relative;
 	width: 980px;
 	margin: auto;
+	padding-bottom: 10px;
 }
 
 #header #links
