--- a/core/templates/campaign_created.html
+++ b/core/templates/campaign_created.html
@@ -19,7 +19,56 @@
 <li>Admin: <a href="{% url campaign_admin chash=campaign.chash %}">{{host}}{% url campaign_admin chash=campaign.chash %}</a><br/></li>
 <ul>
 
-
 </div>
+
+<div id="email-admin-details" class="create">
+
+<input type="text" id="email_address" value="name@sampledomain.com"/>
+<button id="email-button">
+Email Details To Self
+</button>
+</div>
+
+<script>
+  $("input[type  = text]").click(function() {
+         
+                if (typeof($(this).attr("original")) == "undefined") {
+                     $(this).attr("original", $(this).val());       
+                }
+                if (trim($(this).val()) == $(this).attr("original")) { 
+                     $(this).val("");
+                }
+		$(this).css("color", "black");
+     });
+
+     $("input[type  = text]").focusout(function() {
+                if (trim($(this).val()) == "") {
+                      $(this).val($(this).attr("original"));
+                     $(this).css("color", "#E0E0E0");
+                }
+     });
+
+    $("#email-button").click(function() {
+
+          var values = {};
+          values["email_address"] = $("#email_address").val();
+          values["content"] = $("#create-thanks").html();
+          values["chash"] = "{{campaign.chash}}";
+
+          $.ajax({
+    		url: '{% url send_details_email %}', 
+     			dataType: "json",
+     			type: "POST",
+     			data: values, 
+     		success: function(data){
+                     $("#email_address").val("");
+
+     					},
+     		beforeSend: function() {
+     		}
+                });
+
+    });
+</script>
 
 {% endblock %}
