Adding a contact form on the side for feedback.

--- a/core/templates/header.html
+++ b/core/templates/header.html
@@ -6,4 +6,10 @@
 	    	<a href="#">Contact</a>
 	  	</div>
     </div>
+
+<script>
+      $("#header").click(function(){
+      window.location.href = "{% url frontpage %}";
+     });
+    </script>
     <!-- END header -->
