--- a/core/templates/site_base.html
+++ b/core/templates/site_base.html
@@ -96,7 +96,7 @@
             <h3>Contact RippleFunction</h3>
 	    <br/>
             <p>Thanks for checking out our site.</p>
-            <p>We'd love to hear form you. <br/><br/>Please email info@ripplefunction.com</p>
+            <p>We'd love to hear from you. <br/><br/>Please email info@ripplefunction.com</p>
         </div>
 
 							     
