--- a/core/templates/site_base.html
+++ b/core/templates/site_base.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Language" content="en-us" />
 
     <script type="text/javascript" src="{% url static 'javascript/jquery-1.4.2.min.js' %}" ></script>
+    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js?ver=2.9.2'></script> 
     <script type="text/javascript" src="{% url static 'javascript/jquery.tabSlideOut.v1.3.js' %}" ></script>
     <script type="text/javascript" src="{% url static 'javascript/myjscript.js' %}" ></script>
     <link rel="stylesheet" type="text/css" href="{% url static 'css/top-site-base.css' %}" />    
@@ -71,7 +72,7 @@
             pathToTabImage: '{% url static 'images/contact_tab.gif' %}', //path to the image for the tab //Optionally can be set using css
             imageHeight: '122px',                     //height of tab image           //Optionally can be set using css
             imageWidth: '40px',                       //width of tab image            //Optionally can be set using css
-            tabLocation: 'right',                      //side of screen where tab lives, top, right, bottom, or left
+            tabLocation: 'left',                      //side of screen where tab lives, top, right, bottom, or left
             speed: 300,                               //speed of animation
             action: 'click',                          //options: 'click' or 'hover', action to trigger animation
             topPos: '300px',                          //position from the top/ use if tabLocation is left or right
@@ -99,7 +100,49 @@
             <p>We'd love to hear from you. <br/><br/>Please email info@ripplefunction.com</p>
         </div>
 
-							     
+
+<script type="text/javascript"> 
+  swfobject.registerObject("wpFollowmeFlash", "9.0.0");
+</script> 
+<style type="text/css"> 
+.getflash { font-size:8px; }
+.wp_followme_c2 {
+position:fixed;
+background:#FCBC0A;
+top:300px;
+right:0px;
+width:32px;
+height:160px;
+border:1px solid #FFFFFF;
+color:#080808;
+}
+</style>
+</div> 
+<div style="position:relative;"> 
+  <div class="wp_followme_c2"> 
+    <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540001" width="32" height="160" id="wpFollowmeFlash"> 
+      <param name="movie" value="http://www.fourhourworkweek.com/blog/wp-content/plugins/wp-followme/flash/wp_followme.swf" /> 
+      <param name="allowfullscreen" value="false" /> 
+      <param name="allowscriptaccess" value="always" /> 
+      <param name="flashvars" value="twit_icon={% url static 'images/twitt-bird.png' %}&amp;turl=http://www.twitter.com/ripplefunction&amp;twitmsg=Follow Us&amp;twitmsgcolor=080808&amp;iconbgcolor=FFFFFF" /> 
+      <param name="bgcolor" value="#FCBC0A" /> 
+
+<!--[if !IE]>--> 
+      <object type="application/x-shockwave-flash" data="http://www.fourhourworkweek.com/blog/wp-content/plugins/wp-followme/flash/wp_followme.swf" width="32" height="160"> 
+        <param name="allowfullscreen" value="false" /> 
+        <param name="allowscriptaccess" value="always" /> 
+        <param name="flashvars" value="twit_icon={% url static 'images/twitt-bird.png' %}&amp;turl=http://www.twitter.com/ripplefunction&amp;twitmsg=Follow Us&amp;twitmsgcolor=080808&amp;iconbgcolor=FFFFFF" /> 
+        <param name="bgcolor" value="#FCBC0A" /> 
+        <!--<![endif]--> 
+			 <div class="getflash"> 
+         <a rel="nofollow" href="http://www.adobe.com/go/getflashplayer"><img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" /></a>Plugin by wpburn.com <a href="http://wpburn.com">wordpress themes</a></div><!--[if !IE]>--> 
+      </object> 
+<!--<![endif]--> 
+
+    </object> 
+  </div> 
+</div> 
+ 
 </body>
 </html>
     
