--- a/core/templates/header.html
+++ b/core/templates/header.html
@@ -1,10 +1,12 @@
     <div id="header">
-		<div id ="logo"><img src="{% url static 'images/cv_logo.png' %}"></div>
+      <div id="header-container">
+		<div id ="logo"><img height="40px" src="{% url static 'images/logo.png' %}"></div>
 	  	<div id="links">
-            <a href="#">Get CollectiveVIP</a> &nbsp;&nbsp; 
+            <a href="#">Get RippleFunction</a> &nbsp;&nbsp; 
 	    	<a href="#">How it Works</a> &nbsp;&nbsp; 
 	    	<a href="#">Contact</a>
 	  	</div>
+	</div>
     </div>
 
 <script>
