--- a/static/css/frontpage_style.css
+++ b/static/css/frontpage_style.css
@@ -1,4 +1,4 @@
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}:focus{outline:0}ins{text-decoration:none}del{text-decoration:line-through}table{border-collapse:collapse;border-spacing:0}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content-front:'';content-front:none}:focus{outline:0}ins{text-decoration:none}del{text-decoration:line-through}table{border-collapse:collapse;border-spacing:0}
 		html { 
 			background-color: #fff;
 		}
@@ -10,16 +10,16 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 			color: #000; 
 		}
 		#container { 
-			margin: auto; 
-			width: 750px;
-		}
+		#	margin: auto; 
+		#	width: 750px;
+		#}
 		#container #toplinks{
 			float: right; 
 			padding-top: 10px;
 			width: 300px;
 			text-align: right;
 		}
-		#container #content { 
+		#container #content-front { 
  			margin: auto;
 			padding: 18px 20px; 
 			width: 545px;
@@ -32,25 +32,25 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 			text-align: center; 
 		}
 		
-		#container #content #h{
+		#container #content-front #h{
 			font-size: 18px;
 			}
-		#container #footer { 
- 			margin: auto;
-			padding: 55px 20px; 
-			width: 750px;
-		}
+		##container #footer { 
+ 		#	margin: auto;
+		#	padding: 55px 20px; 
+		#	width: 750px;
+		#}
 		#container #footer #copyright { 
-			position: relative;
-			width: 300px;
-			float: left; 
-		}
-		#container #footer #dets{ 
-			position: relative;
-			width: 300px;
-			float: right;
-			text-align: right;
-		}
+		#	position: relative;
+		#	width: 300px;
+		#	float: left; 
+		#}
+		##container #footer #dets{ 
+		#	position: relative;
+		#	width: 300px;
+		#	float: right;
+		#	text-align: right;
+		#}
 
 		a { 
 			color: #4B0082; 
