--- a/core/templates/footer.html
+++ b/core/templates/footer.html
@@ -1,5 +1,11 @@
 <!-- END main -->
 <div id="footer">
-	Copyright CollectiveVIP 2010
+		<div id="dets">
+			<a href="#">About</a> &nbsp; 
+			<a href="#">Privacy Policy</a>
+		</div>
+               <div id="copyright">
+	           Copyright CollectiveVIP 2010
+               </div>
 </div>
 <!-- END footer -->
