--- a/core/templates/site_base.html
+++ b/core/templates/site_base.html
@@ -65,25 +65,25 @@
 
 
 
-    $(function(){
-        $('.slide-out-div').tabSlideOut({
-            tabHandle: '.handle',                     //class of the element that will become your tab
-            //pathToTabImage: 'http://tab-slide-out.googlecode.com/files/jquery.tabSlideOut.v1.3.js', //path to the image for the tab //Optionally can be set using css
-            pathToTabImage: '{% url static 'images/contact_tab.gif' %}', //path to the image for the tab //Optionally can be set using css
-            imageHeight: '122px',                     //height of tab image           //Optionally can be set using css
-            imageWidth: '40px',                       //width of tab image            //Optionally can be set using css
-            tabLocation: 'left',                      //side of screen where tab lives, top, right, bottom, or left
-            speed: 300,                               //speed of animation
-            action: 'click',                          //options: 'click' or 'hover', action to trigger animation
-            topPos: '300px',                          //position from the top/ use if tabLocation is left or right
-            leftPos: '20px',                          //position from left/ use if tabLocation is bottom or top
-            fixedPosition: false                      //options: true makes it stick(fixed position) on scroll
-        });
-
-    });
+    //$(function(){
+    //    $('.slide-out-div').tabSlideOut({
+    //        tabHandle: '.handle',                     //class of the element that will become your tab
+    //        //pathToTabImage: 'http://tab-slide-out.googlecode.com/files/jquery.tabSlideOut.v1.3.js', //path to the image for the tab //Optionally can be set using css
+    //        pathToTabImage: '{% url static 'images/contact_tab.gif' %}', //path to the image for the tab //Optionally can be set using css
+    //        imageHeight: '122px',                     //height of tab image           //Optionally can be set using css
+    //        imageWidth: '40px',                       //width of tab image            //Optionally can be set using css
+    //        tabLocation: 'left',                      //side of screen where tab lives, top, right, bottom, or left
+    //        speed: 300,                               //speed of animation
+    //        action: 'click',                          //options: 'click' or 'hover', action to trigger animation
+    //        topPos: '300px',                          //position from the top/ use if tabLocation is left or right
+    //        leftPos: '20px',                          //position from left/ use if tabLocation is bottom or top
+    //        fixedPosition: false                      //options: true makes it stick(fixed position) on scroll
+    //    });
+    //
+    //});
 
     </script>
-<style type="text/css">
+<!--<style type="text/css">
       
       .slide-out-div {
           padding: 20px;
@@ -98,7 +98,7 @@
 	    <br/>
             <p>Thanks for checking out our site.</p>
             <p>We'd love to hear from you. <br/><br/>Please email info@ripplefunction.com</p>
-        </div>
+        </div>-->
 
 
 <script type="text/javascript"> 
