Fixing up a bunch of bugs.

--- a/core/templates/campaign_created.html
+++ b/core/templates/campaign_created.html
@@ -13,7 +13,7 @@
 <h1>Campaign Created, Thanks..</h1>
 
 <ul>
-<li>Campaign: <a href="{% url campaign_page chash=campaign.chash %}">{{host}}{% url campaign_page chash=campaign.chash %}</a><br/></li>
+<li>Landing Page: <a href="{% url campaign_page chash=campaign.chash %}">{{host}}{% url campaign_page chash=campaign.chash %}</a><br/></li>
 <li>Analytics: <a href="{% url campaign_analytics chash=campaign.chash %}">{{host}}{% url campaign_analytics chash=campaign.chash %}</a><br/></li>
 <li>Edit: <a href="{% url campaign_update chash=campaign.chash %}">{{host}}{% url campaign_update chash=campaign.chash %}</a><br/></li>
 <li>Admin: <a href="{% url campaign_admin chash=campaign.chash %}">{{host}}{% url campaign_admin chash=campaign.chash %}</a><br/></li>
