--- a/core/templates/footer.html
+++ b/core/templates/footer.html
@@ -1,11 +1,15 @@
 <!-- END main -->
+<div>
 <div id="footer">
+  <div id="footer-container">
 		<div id="dets">
 			<a href="#">About</a> &nbsp; 
 			<a href="#">Privacy Policy</a>
 		</div>
                <div id="copyright">
-	           Copyright CollectiveVIP 2010
+	           Copyright RippleFunction 2010
                </div>
+</div>
+</div>
 </div>
 <!-- END footer -->
