--- a/core/templates/site_base.html
+++ b/core/templates/site_base.html
@@ -100,7 +100,7 @@
             <p>We'd love to hear from you. <br/><br/>Please email info@ripplefunction.com</p>
         </div>-->
 
-
+<!--
 <script type="text/javascript"> 
   swfobject.registerObject("wpFollowmeFlash", "9.0.0");
 </script> 
@@ -127,22 +127,23 @@ color:#080808;
       <param name="flashvars" value="twit_icon={% url static 'images/twitt-bird.png' %}&amp;turl=http://www.twitter.com/ripplefunction&amp;twitmsg=Follow Us&amp;twitmsgcolor=080808&amp;iconbgcolor=FFFFFF" /> 
       <param name="bgcolor" value="#FCBC0A" /> 
 
-<!--[if !IE]>--> 
+<!--[if !IE]>
       <object type="application/x-shockwave-flash" data="http://www.fourhourworkweek.com/blog/wp-content/plugins/wp-followme/flash/wp_followme.swf" width="32" height="160"> 
         <param name="allowfullscreen" value="false" /> 
         <param name="allowscriptaccess" value="always" /> 
         <param name="flashvars" value="twit_icon={% url static 'images/twitt-bird.png' %}&amp;turl=http://www.twitter.com/ripplefunction&amp;twitmsg=Follow Us&amp;twitmsgcolor=080808&amp;iconbgcolor=FFFFFF" /> 
         <param name="bgcolor" value="#FCBC0A" /> 
-        <!--<![endif]--> 
+        <!--<![endif]
 			 <div class="getflash"> 
-         <a rel="nofollow" href="http://www.adobe.com/go/getflashplayer"><img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" /></a>Plugin by wpburn.com <a href="http://wpburn.com">wordpress themes</a></div><!--[if !IE]>--> 
+         <a rel="nofollow" href="http://www.adobe.com/go/getflashplayer"><img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" /></a>Plugin by wpburn.com <a href="http://wpburn.com">wordpress themes</a></div><!--[if !IE]> 
       </object> 
-<!--<![endif]--> 
+<!--<![endif]
 
     </object> 
   </div> 
 </div> 
  
+-->
 </body>
 </html>
     
