--- a/frontpage/templates/frontpage.html
+++ b/frontpage/templates/frontpage.html
@@ -10,8 +10,7 @@
 <br/><br/><br/><br/>
 <div id="content-front">
 	<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="545" height="383" id="viddler_14c3c664"><param name="movie" value="http://www.viddler.com/player/14c3c664/" /><param name="allowScriptAccess" value="always" /><param name="allowFullScreen" value="true" /><embed src="http://www.viddler.com/player/14c3c664/" width="545" height="383" type="application/x-shockwave-flash" allowScriptAccess="always" allowFullScreen="true" name="viddler_14c3c664"></embed></object>
-<div/>
-<br/><br/><br/>
+</div>
 {% endblock %}
 
 
