--- a/core/templates/campaign_admin.html
+++ b/core/templates/campaign_admin.html
@@ -16,7 +16,7 @@
 
 <ul>
 <li>
-Campaign: <a href="{% url campaign_page chash=campaign.chash %}">{{host}}{% url campaign_page chash=campaign.chash %}</a><br/>
+Landing Page: <a href="{% url campaign_page chash=campaign.chash %}">{{host}}{% url campaign_page chash=campaign.chash %}</a><br/>
 </li>
 <li>
 Analytics: <a href="{% url campaign_analytics chash=campaign.chash %}">{{host}}{% url campaign_analytics chash=campaign.chash %}</a><br/>
