--- a/core/templates/create_campaign.html
+++ b/core/templates/create_campaign.html
@@ -25,19 +25,19 @@
 <BR><BR><BR><BR>
 
 <div id="choose-create-entity" class="create">
-<h1>Create Campaign</h1>	
+<h1>Create Promotion</h1>	
     	 	<input type="text" value="Input product info URL" name="campaign_url" id="campaign_url"></input>
 		<button id="create-button" disabled="true">CREATE</button>
 </div>
 
 
 <div id="preview" style="display:none;">
+  <div style="background-color:#ddd;">Preview</div>
     <iframe id="iframe_preview" src ="{{campaign.url}}" width="100%" height="600" scrolling="auto">
        <p>Your browser does not support iframes.</p>
     </iframe>
 </div>
 <script>
-
 
   $(document).ready(function() {
   
