Fixing up some bugs.

--- a/core/templates/header.html
+++ b/core/templates/header.html
@@ -2,7 +2,7 @@
       <div id="header-container">
 		<div id ="logo"><img height="35px" src="{% url static 'images/rf-logo.png' %}"></div>
 	  	<div id="links">
-            <a href="#">Get RippleFunction</a> &nbsp;&nbsp; 
+            <a href="/create_campaign">Get RippleFunction</a> &nbsp;&nbsp; 
 	    	<a href="#">How it Works</a> &nbsp;&nbsp; 
 	    	<a href="#">Contact</a>
 	  	</div>
