--- a/core/templates/create.html
+++ b/core/templates/create.html
@@ -46,7 +46,7 @@
   		<ul>
     	 	<input type="hidden" value="event" name="campaign_type" ></input>
     		<li>
-				<label for="event_name">Event Name: </label> 
+				<label for="event_name">Event lName: </label> 
 				<input type="text" name="event_name" id="event_name" value="BLOG WORLD 2010" class="required" />
 			</li>
 	
