--- a/static/css/top-site-base.css
+++ b/static/css/top-site-base.css
@@ -32,7 +32,7 @@ body{
 #header #logo
 {
 	float: left;
-	padding-left: 40px;
+	padding-left: 35px;
 	position: relative;
 }
 #content
@@ -53,7 +53,7 @@ body{
 #header #links
 {
 	float: right;
-	color: #581e92;
+	#color: #581e92;
 	width: 300px;
 	text-align: right;
 	padding: 12px 40px 0px 12px;
@@ -61,10 +61,11 @@ body{
 	font-size:12px;
 	font-weight: bold;
 }
-#header #links a:link {text-decoration: none; color: #581e92;}
-#header #links a:visited {text-decoration: none; color: #581e92;}
-#header #links a:active {text-decoration: none; color: #581e92;}
-#header #links a:hover {text-decoration: none; color: #581e92;}
+
+#header #links a:link {text-decoration: none; color: #0074A0;}
+#header #links a:visited {text-decoration: none; color: #0074A0;}
+#header #links a:active {text-decoration: none; color: #0074A0;}
+#header #links a:hover {text-decoration: none; color: #0074A0;}
 
 #footer {
         font-size: 16px;
@@ -89,7 +90,7 @@ position: relative;
 }
 #footer #dets a {
 	margin: 0px 5px 0px 5px;
-			color: #4B0082; 
+			color: #0074A0; 
 			text-decoration: none; 
 		
 }
